# home-temperature-monitor

./: pyproject.toml
credentials/: .gitignore  example-switchbot.json
temp_monitor/: __main__.py  create_table.sql  db.py  server.py  types.py  update.py
