[tool.poetry]
name = "temp-monitor"
version = "0.1.0"
description = ""
authors = ["Yasunori Horikoshi <hotoku@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
certifi = "^2024.7.4"
urllib3 = "^2.2.2"
pydantic = "^2.8.2"
fastapi = {extras = ["standard"], version = "^0.112.1"}
click = "^8.1.7"


[tool.poetry.group.dev.dependencies]
sqlfluff = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
